added global scope && list operations && lisp code from files